Fixed a z-index bug with currentTimeIndicator and contentHeader

--- a/frontend/css/week.css
+++ b/frontend/css/week.css
@@ -96,7 +96,7 @@ a {
     top: 0;
     position: sticky;
     width: inherit;
-    z-index: 1;
+    z-index: 2;
     height: 40px;
     -webkit-box-shadow: 0 0 10px 0 rgba(0,0,0,0.75);
     -moz-box-shadow: 0 0 10px 0 rgba(0,0,0,0.75);
